# no8s-operator

./: .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  controller.py  db.py  docker-compose.yml  main.py  migrate.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: action-plugins.md  admission-controllers.md  cluster-nodes.md  index.md  installation.md  leader-election.md  reconciler-architecture.md  resource-types.md  resources.md  secret-stores.md  users.md  writing-a-reconciler.md
docs/examples/: postgresql-cluster-failover.md
docs/stylesheets/: extra.css
migrations/: 001_initial_schema.sql
plugins/: __init__.py  base.py
plugins/actions/: __init__.py  base.py
plugins/actions/github_actions/: __init__.py
src/: admission.py  api_models.py  auth.py  cluster_status.py  config.py  controller.py  db.py  events.py  ldap_sync.py  leader_election.py  main.py  management_api.py  migrate.py  tfctl.py  validation.py
src/migrations/: 001_initial_schema.sql  002_admission_webhooks.sql  002_cluster_nodes.sql
src/plugins/: __init__.py  registry.py
src/plugins/actions/: __init__.py  base.py
src/plugins/actions/github_actions/: executor.py
src/plugins/inputs/: __init__.py  base.py
src/plugins/inputs/http/: __init__.py  api.py
src/plugins/reconcilers/: __init__.py  base.py
src/plugins/secrets/: __init__.py  aws_secrets_manager.py  base.py  env.py  vault.py
tests/: __init__.py  conftest.py  test_admission.py  test_api.py  test_auth.py  test_cluster_status.py  test_config.py  test_controller.py  test_custom_roles.py  test_db.py  test_events.py  test_finalizers.py  test_ldap.py  test_leader_election.py  test_main.py  test_management_api.py  test_migrate.py  test_reconciler.py  test_registry.py  test_secrets.py  test_users.py  test_validation.py
