[project]
name = "no8s-operator"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "A Kubernetes-style operator for managing infrastructure"
requires-python = ">=3.11"
dependencies = [
    # Database
    "asyncpg==0.31.0",
    # Web framework
    "fastapi==0.128.1",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    # Async utilities
    "aiohttp==3.11.12",
    # Schema validation
    "jsonschema==4.26.0",
    # Auth
    "PyJWT>=2.8",
    "bcrypt>=5.0",
]

[project.optional-dependencies]
ldap = [
    "ldap3>=2.9",
]
aws = [
    "boto3>=1.34",
]
dev = [
    "flake8>=7.3.0",
    "black>=26.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "pglast>=7.0",
]

[project.entry-points."no8s.secret_stores"]
# Third-party packages register their secret store plugins here.
# Example: my_vault_plugin = "mypkg.stores:CustomVaultStore"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.eggs
    | build
    | dist
)/
'''